# aware

./: .fly-token-wren  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.gateway  aware-node-host.mjs  docker-compose.api.yml  docker-compose.yml  docker-entrypoint.sh  fly.gateway.toml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Dockerfile  fly.toml  index.ts  package.json  tsconfig.json
api/db/: connection.ts  (+1 more)
bluefairy/: .dockerignore  Dockerfile  Makefile  main.py  mypy.ini  pyproject.toml  pytest.ini
bluefairy/app/api/: routers.py
bluefairy/app/api/endpoints/: auth.py  ws.py
bluefairy/app/core/: config.py  containers.py
bluefairy/app/core/database/: session.py
bluefairy/app/core/middleware/: auth.py
bluefairy/app/models/: __init__.py  conversation.py  user.py
bluefairy/app/repositories/: __init__.py  base.py  conversations.py  users.py
bluefairy/app/schemas/: conversations.py  users.py
bluefairy/app/services/: auth.py  conversations.py  openclaw.py  sessions.py  users.py
bluefairy/tests/: conftest.py
config/: entrypoint.sh  seed.json
control-plane/: Dockerfile  fly.toml  package-lock.json  package.json
dashboard/: .env.example  middleware.ts  package-lock.json  package.json
docs/: architecture.md  fly-deployment.md  k3s-migration.md  k8s-migration.md  phase3-runbook.md
infra/: .gitignore  README.md  alb.tf  dns.tf  ecr.tf  ecs.tf  eks.tf  iam.tf  main.tf  outputs.tf  rds.tf  secrets.tf  security.tf  terraform.tfvars.example  variables.tf  vpc.tf
scripts/: build-node-host.sh  package-mac-app.sh  restart-mac.sh  (+1 more)
(+119 files in other folders)
