[project]
name = "bluefairy"
version = "0.2.0"
description = "BlueFairy — Auth & WebSocket proxy for OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "dependency-injector>=4.41.0",
    "python-multipart>=0.0.6",
    "httpx>=0.28.1",
    "python-dotenv>=0.19.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.3.0",
    "bcrypt==4.3.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["archive*"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "types-redis>=4.6.0.20241004",
]
